chore: reuse the location logic