@@ -4,10 +4,10 @@ import java.io.File;
 import java.util.function.Function;
 import java.util.stream.Collectors;
 
+import ai.timefold.solver.benchmarks.examples.common.domain.location.DistanceType;
+import ai.timefold.solver.benchmarks.examples.common.domain.location.RoadLocation;
 import ai.timefold.solver.benchmarks.examples.common.persistence.AbstractJsonSolutionFileIO;
 import ai.timefold.solver.benchmarks.examples.tsp.domain.TspSolution;
-import ai.timefold.solver.benchmarks.examples.tsp.domain.location.DistanceType;
-import ai.timefold.solver.benchmarks.examples.tsp.domain.location.RoadLocation;
 
 public final class TspSolutionFileIO extends AbstractJsonSolutionFileIO<TspSolution> {
 
@@ -30,7 +30,7 @@ public final class TspSolutionFileIO extends AbstractJsonSolutionFileIO<TspSolut
         var roadLocationList = tspSolution.getLocationList().stream()
                 .filter(location -> location instanceof RoadLocation)
                 .map(location -> (RoadLocation) location)
-                .collect(Collectors.toList());
+                .toList();
         var locationsById = roadLocationList.stream()
                 .collect(Collectors.toMap(RoadLocation::getId, Function.identity()));
         /*
